# CCID

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.md  MANIFEST  Makefile  Makefile.am  NEWS  QNX_PORTING_GUIDE.md  README  README.md  SCARDCONTOL.txt  SCARDCONTROL.md  SCARDGETATTRIB.md  SCARDGETATTRIB.txt  bootstrap  c.sh  config.h.in  configure.ac  configure.in  create_distrib.sh  macOS_Sierra10.12  meson.build  meson.options  qnx-toolchain.cmake  reconf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_meson.yml  codespell.yml
MacOSX/: configure  convert_reader_h.pl  debuglog.h  ifdhandler.h  pcsclite.h  reader.h  reader.h.in  winscard.h  wintypes.h
contrib/: Makefile.am
contrib/Kobil_mIDentity_switch/: Kobil_mIDentity_switch.c  Makefile.am  README_Kobil_mIDentity_switch.txt  midswitch.c
contrib/RSA_SecurID/: Makefile.am  Makefile.in  RSA_SecurID_getpasswd.1  RSA_SecurID_getpasswd.c
contrib/midswitch/: Makefile.am
examples/: .cvsignore  GetSetNAD.py  Makefile.am  PCSCv2part10.c  PCSCv2part10.h  get_usb_path.py  linux_verify.py  qnx_reference_test.c  scardcontrol.c  test_transfer.c
m4/: acx_pthread.m4  as-ac-expand.m4  ax_pthread.m4
readers/: ACR122U.txt  ACR122U_PICC.txt  ACR38.txt  ACR38U-CCID.txt  ACS_ACR100.txt  ACS_ACR101.txt  ACS_ACR1251_Dual_Reader.txt  ACS_ACR1252IMP_Reader.txt  ACS_ACR1252_Dual_Reader.txt  ACS_ACR1252_Reader.txt  ACS_ACR1255U-J1.txt  ACS_ACR1281U.txt  ACS_ACR1552.txt  ACS_ACR1552U.txt  ACS_ACR1581.txt  ACS_ACR38_plugin.txt  ACS_ACR3901U_ICC_Reader.txt  ACS_ACR39U_ICC_Reader.txt  ACS_ACR40T_ICC_Reader.txt  ACS_ACR40U_ICC_Reader.txt  ACS_AET65.txt  ACS_APG8201-B2.txt  ACS_APG8201.txt  ACS_APG8201_v2.txt  ACS_CryptoMate64.txt  ACS_CryptoMate_(T2).txt  ACS_CryptoMate_EVO.txt  ACS_WalletMate_Dual_Reader.txt  AF_Care_One_AFC0.txt  AF_Care_One_AFC1.txt  AF_Care_Two_AFC2.txt  AF_Care_Two_AFC3.txt  AK910_ckey_0001.txt  AK910_ckey_0011.txt  AK910_idone_0101.txt  ANCUD_CCID_USB_Reader_RNG.txt  ASEDrive_IIIe_KB.txt  ASE_IIIe.txt  ATMEL_AT90SCR050.txt  ATMEL_AT90SCR100.txt  (+673 more)
readers/extra_features/: GemPCPinpadv2_features.txt  Gemalto_Ezio_Shield_PinPad_Martin_features.txt  Gemalto_Ezio_Shield_PinPad_Stephanie_features.txt  Gemalto_Ezio_Shield_PinPad_features.txt  Gemalto_IDBridge_CT710.txt  README.txt
src/: .cvsignore  92_pcscd_ccid.rules  Info.plist  Info.plist.src  Makefile  Makefile.am  capabilities.c  ccid.c  ccid.h  ccid_env.c  ccid_env.h  ccid_ifdhandler.h  ccid_serial.c  ccid_serial.h  ccid_usb.c  ccid_usb.h  check  commands.c  commands.h  config.h  convert_version.pl  create_Info_plist.pl  debug.c  debug.h  defs.h  ifdhandler.c  libusb_shim.h  libusb_shim_qnx.c  misc.h  parse.c  parser.h  pcscd_ccid.rules  pcscdefines.h  reader.conf.in  simclist.c  simclist.h  strlcpy.c  strlcpycat.h  sys_generic.h  sys_unix.c  (+4 more)
src/openct/: LICENSE  README  buffer.c  buffer.h  checksum.c  checksum.h  proto-t1.c  proto-t1.h
src/towitoko/: COPYING  Makefile.am  README  apdu.h  atr.c  atr.h  defines.h  pps.c  pps.h  protocol_t1.c  protocol_t1.h  t1_block.c  t1_block.h
